# NeuroSync

./: .gitignore  MANIFEST.in  README.md  poc-test.py  poc_checkpoint.py  poc_checkpoint_temp.py  poc_current.py  poc_gpu.py  poc_improved.py  poc_test.py  pyproject.toml  random_wordlist_creator.py  setup.py
NeuroSync/: __init__.py  version.py
NeuroSync/core/: __init__.py  activations.py  layers.py  losses.py  networks.py
NeuroSync/crypto/: __init__.py  keys.py  operations.py  weights.py
NeuroSync/data/: __init__.py  generators.py  loaders.py
NeuroSync/encoding/: __init__.py  batch.py  codec.py  constants.py
NeuroSync/interface/: __init__.py  cipher.py  pair.py  receiver.py  sender.py  visualizer.py
NeuroSync/protocol/: __init__.py  assembler.py  error_correction.py  flags.py  header.py  key_rotation.py  packet.py  session.py  weight_rotation.py
NeuroSync/security/: __init__.py  analyzer.py  checks.py  thresholds.py
NeuroSync/training/: __init__.py  config.py  evaluation.py  schedulers.py  state.py  trainer.py
NeuroSync/utils/: __init__.py  device.py  io.py  logging.py  timing.py
